--- a/src/components/Clientes.css
+++ b/src/components/Clientes.css
@@ -21,7 +21,7 @@ form {
 }
 
 .input-group {
-    margin-bottom: 20px;
+    margin: 10px;
 }
 
 .input-group label {
@@ -50,3 +50,4 @@ form {
 .input-group button:hover {
     background-color: #0056b3;
 }
+
