--- a/src/components/Clientes.css
+++ b/src/components/Clientes.css
@@ -1,11 +1,11 @@
 .formulario {
     display: inline-block;
-    margin: 20px auto;
+    margin: 100px 190px 100px 190px;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
+    max-width: 1250px;
     width: 100%;
 }
 
@@ -135,3 +135,12 @@ form {
     background-color: #0056b3;
 }
 
+.table, table {
+    align-items: center;
+    margin: 0 auto;
+}
+
+table, th, td {
+    border: 1px solid;
+    text-align: center;
+}
